ref #413 - Correções de violações do Sonar.